<resources>
    <string name="app_name">Museum Artifact Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="saved_items">Saved Items</string>
    <string name="back">Back</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="scroller">Scroller</string>
    <string name="spinner">Spinner</string>
    <string name="manage_items">Manage Items</string>
    <string name="logout">Log out</string>
    <string name="view_artifacts">View Artifacts</string>

    <string name="login_title">Login</string>
    <string name="signup_title">Sign up</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_button_label">Log In</string>
    <string name="signup_button_label">Sign up</string>
    <string name="switch_signup_label">Or sign up now</string>
    <string name="switch_login_label">Already have an account? Log in</string>

    <string name="invalid_username">Username must not be empty</string>
    <string name="invalid_email">Incorrect email format</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="password_not_same">Passwords do not match</string>

    <string name="name_hint">Name</string>
    <string name="description_hint">Description</string>
    <string name="cultural_origin_hint">Cultural Origin</string>
    <string name="dimensions_hint">Dimensions</string>
    <string name="condition_report_hint">Condition Report</string>
    <string name="current_location_hint">Current Location</string>
    <string name="Acquisition_method_hint">Acquisition Method</string>
    <string name="Accesnion_num_hint">Accension Number</string>
    <string name="provenance_hint">Provenance</string>
    <string name="notes_hint">Notes</string>
    <string name="upload_image_hint">Upload Image</string>

    <string-array name="categories_array">
        <item>Books</item>
        <item>Movies</item>
    </string-array>

    <string-array name="artifact_categories">
        <item>Painting and Calligraphy</item>
        <item>Ceramics</item>
        <item>Bronze Ware</item>
        <item>Lacquerware</item>
        <item>Jade Ware</item>
        <item>Enamel Ware</item>
        <item>Glassware</item>
        <item>Furniture</item>
        <item>Embroidery and Textiles</item>
        <item>Documents and Archives</item>
        <item>Gold and Silverware</item>
        <item>Clocks and Watches</item>
        <item>Religious Artifacts</item>
        <item>Daily-use Items</item>
        <item>Weaponry</item>
        <item>Miscellaneous Artifacts</item>
    </string-array>

    <string-array name="artifact_materials">
        <item>Bronze</item>
        <item>Stone</item>
        <item>Wood</item>
        <item>Jade</item>
        <item>Ceramic</item>
        <item>Lacquerware</item>
        <item>Ivory</item>
        <item>Gold</item>
        <item>Silver</item>
        <item>Iron</item>
        <item>Mixed Media</item>
    </string-array>

    <string-array name="artifact_periods">
        <item>Shang Dynasty (c. 1600–1046 BCE)</item>
        <item>Western Zhou Dynasty (c. 1046–771 BCE)</item>
        <item>Eastern Zhou Dynasty (770–256 BCE)</item>
        <item>Qin Dynasty (221–206 BCE)</item>
        <item>Han Dynasty (206 BCE-220 CE)</item>
        <item>Three Kingdoms Period (220–280 CE)</item>
        <item>Jin Dynasty (266–420 CE)</item>
        <item>Southern and Northern Dynasties (420–589 CE)</item>
        <item>Sui Dynasty (581–618 CE)</item>
        <item>Tang Dynasty (618–907 CE)</item>
        <item>Five Dynasties and Ten Kingdoms (907–960 CE)</item>
        <item>Song Dynasty (960–1279 CE)</item>
        <item>Liao Dynasty (907–1125 CE)</item>
        <item>Jin Dynasty (1115–1234 CE)</item>
        <item>Yuan Dynasty (1271–1368 CE)</item>
        <item>Ming Dynasty (1368–1644 CE)</item>
        <item>Qing Dynasty (1644–1912 CE)</item>
        <item>Republic of China Period (1912–1949 CE)</item>
    </string-array>

    <!--Supabase Config -->
    <string name="supabase_url">https://slamakuftowwgtwglyon.supabase.co</string>
    <string name="supabase_anon_key">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNsYW1ha3VmdG93d2d0d2dseW9uIiwicm9sZSI6ImFub24iLCJpYXQiOjE3ODQxMDUwMDEsImV4cCI6MjA5OTY4MTAwMX0.QfM1VFoIeVkf1Fhx8IluskDxbUj97PcZO7170-jeLuI</string>
    <string name="supabase_image_bucket">artifacts</string>

    <!-- Expanded View Labels -->
    <string name="lot_num_label">Lot Number</string>
    <string name="description_label">Description</string>
    <string name="category_label">Category</string>
    <string name="material_label">Material</string>
    <string name="period_label">Period</string>
    <string name="cultural_origin_label">Cultural Origin</string>
    <string name="dimensions_label">Dimensions</string>
    <string name="condition_report_label">Condition Report</string>
    <string name="location_label">Location</string>
    <string name="acq_method_label">Acquisition Method</string>
    <string name="provenance_label">Provenance</string>
    <string name="accession_num_label">Accession Number</string>
    <string name="notes_label">Notes</string>

</resources>