<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/login_title"
        android:textSize="48sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="146dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="10">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_marginBottom="32dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:weightSum="10">

            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/username_hint"
                android:visibility="gone" />


            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/email_hint" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/password_confirm"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:visibility="gone" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/login_button_label"
                android:layout_marginTop="24dp" />

            <Button
                android:id="@+id/switch_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/switch_signup_label"
                android:textColor="#673AB7"
                app:backgroundTint="#FFFFFF"
                app:strokeColor="#673AB7"
                app:strokeWidth="2dp" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>